[gd_scene load_steps=6 format=2]

[ext_resource path="res://script/PlayButton.gd" type="Script" id=1]
[ext_resource path="res://fonts/Roboto-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/ScenesBackground/GameOver.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=3]
size = 31
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 31
use_filter = true
font_data = ExtResource( 2 )

[node name="End" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0

[node name="TextureRect" type="TextureRect" parent="Panel"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="PlazAgain" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -103.0
margin_top = 596.0
margin_right = 122.0
margin_bottom = 664.0
custom_fonts/font = SubResource( 3 )
text = "PLAY AGAIN"
flat = true
icon_align = 1

[node name="EndGame" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 306.0
margin_top = 461.0
margin_right = 514.0
margin_bottom = 531.0
custom_fonts/font = SubResource( 4 )
text = "No More "
flat = true

[node name="GoMenu" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 463.0
margin_right = -308.0
margin_bottom = 529.0
custom_fonts/font = SubResource( 4 )
text = "Main Menu"
flat = true

[connection signal="pressed" from="Panel/PlazAgain" to="CanvasLayer" method="_on_PlazAgain_pressed"]
[connection signal="pressed" from="Panel/EndGame" to="CanvasLayer" method="_on_EndGame_pressed"]
[connection signal="pressed" from="Panel/GoMenu" to="CanvasLayer" method="_on_GoMenu_pressed"]
