[gd_scene load_steps=10 format=2]

[ext_resource path="res://script/PlayButton.gd" type="Script" id=1]
[ext_resource path="res://fonts/Roboto-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/Roboto-BoldItalic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/ScenesBackground/MainMenu.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.00784314, 0.337255, 1 )
border_color = Color( 0, 0.0352941, 0.709804, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=2]
size = 119
outline_size = 12
outline_color = Color( 0.0352941, 0.337255, 0.615686, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 31
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 31
use_filter = true
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -638.0
margin_top = -360.0
margin_right = 642.0
margin_bottom = 360.0
grow_vertical = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
custom_styles/panel = SubResource( 1 )

[node name="MainMenu" type="TextureRect" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -705.0
margin_top = -346.0
margin_right = 567.0
margin_bottom = -15.0
rect_rotation = -7.30556
custom_fonts/font = SubResource( 2 )
text = "BEANBOY"
align = 1
valign = 1

[node name="PlazAgain" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -483.0
margin_top = -37.0
margin_right = -293.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 5 )
text = "PLAY "
flat = true
icon_align = 1

[node name="LevelSelect" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -340.0
margin_top = 74.0
margin_right = -148.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 3 )
text = "LEVELS "
flat = true
icon_align = 1

[node name="EndGame" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.0
margin_top = 189.0
margin_right = -5.0
margin_bottom = 270.0
custom_fonts/font = SubResource( 4 )
text = "No More "
flat = true

[connection signal="pressed" from="Panel/PlazAgain" to="CanvasLayer" method="_on_PlazAgain_pressed"]
[connection signal="pressed" from="Panel/LevelSelect" to="CanvasLayer" method="_on_LevelSelect_pressed"]
[connection signal="pressed" from="Panel/EndGame" to="CanvasLayer" method="_on_EndGame_pressed"]
